--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,5 +1,8 @@
 body{
-    background-color: #bdbdd3;
+    background-image: url("images/imgLogin.jpg");
+    background-size: 100% 100%;
+    padding: 0;
+    margin: 0;
 }
 .MyForm
 {
@@ -8,7 +11,7 @@ body{
     box-sizing: border-box;
     position: fixed;
     left: 50%;
-    top: 35%;
+    top: 60%;
     transform: translate(-50%, -50%);
 }
 
@@ -19,6 +22,7 @@ h1
     font-weight: bold;
     font-family: "Open Sans", sans-serif;
     margin-bottom: 30px;
+    opacity: 0.8;
 }
 
 .MyInput{
