--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,8 +1,19 @@
+html{
+    height: 100%;
+}
+#changeImg{
+    position: relative;
+    top:17px;
+}
 body{
     background-image: url("images/imgLogin.jpg");
     background-size: 100% 100%;
     padding: 0;
     margin: 0;
+}
+#positionOfLogin{
+    position: relative;
+    top: 350px;
 }
 .MyForm
 {
@@ -14,7 +25,13 @@ body{
     top: 60%;
     transform: translate(-50%, -50%);
 }
-
+.MyCheckBox{
+    text-align: center;
+    color: #817ffe;
+    font-weight: bold;
+    font-family: "Open Sans", sans-serif;
+    opacity: 0.8;
+}
 h1
 {
     text-align: center;
