--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -14,6 +14,7 @@ body{
 #positionOfLogin{
     position: relative;
     top: 350px;
+
 }
 .MyForm
 {
@@ -57,3 +58,10 @@ h1
     text-indent: 5px;
     transition: all 0.6s ease;
 }
+input:hover{
+    padding: 14px 16px;
+}
+
+
+
+::placeholder{color: #bdbdd3;}
