--- a/src/main/webapp/WEB-INF/css/news.css
+++ b/src/main/webapp/WEB-INF/css/news.css
@@ -1,12 +1,23 @@
 img{
-    width:400px;
-    height:200px;
+    width:100%;
+    height:35%;
 }
 aside{
     text-align:center;
     border: 3px solid black;
-    margin:2px;
-    width:406px;
-    height:600px;
+    margin:0.4%;
+    width:24%;
+    height:44%;
     float:left;
+}
+h1
+{
+    text-align: center;
+    color: maroon;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+a:link
+{
+    color:black;
 }
