--- a/src/main/webapp/WEB-INF/css/welcome.css
+++ b/src/main/webapp/WEB-INF/css/welcome.css
@@ -1,8 +1,37 @@
 
+li, a
+{
+    font-family:'Open Sans', sans-serif;
+    font-weight: 500;
+    font-size: 18px ;
+    color: floralwhite;
+
+}
+#bal
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px 13%;
+    background: none;
+    text-decoration: none;
+}
+
+#nav__links li
+{
+
+    list-style: none;
+    display: inline-block;
+    padding-left:30px;
+    padding-right:30px;
+    background: none;
+    text-decoration: none;
+}
+
 .grid
 {
     display: block;
-    width: 1917px;
+    width: 1902px;
     height: 451px;
     padding: 40px 20px;
     box-sizing: border-box;
