--- a/src/main/webapp/WEB-INF/css/verifyFail.css
+++ b/src/main/webapp/WEB-INF/css/verifyFail.css
@@ -1,9 +1,9 @@
 li, a
 {
     font-family:'Open Sans', sans-serif;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 18px ;
-    color: black;
+    color: blue;
 
 }
 #bal
