--- a/src/main/webapp/WEB-INF/css/verifySuccess.css
+++ b/src/main/webapp/WEB-INF/css/verifySuccess.css
@@ -3,7 +3,7 @@ li, a
     font-family:'Open Sans', sans-serif;
     font-weight: 500;
     font-size: 18px ;
-    color: black;
+    color: cornflowerblue;
 
 }
 #bal
