--- a/src/main/webapp/WEB-INF/css/verifyFail.css
+++ b/src/main/webapp/WEB-INF/css/verifyFail.css
@@ -3,7 +3,7 @@ li, a
     font-family:'Open Sans', sans-serif;
     font-weight: bold;
     font-size: 18px ;
-    color: blue;
+    color: cornflowerblue;
 
 }
 #bal
