--- a/src/main/webapp/WEB-INF/css/verifySuccess.css
+++ b/src/main/webapp/WEB-INF/css/verifySuccess.css
@@ -1,7 +1,7 @@
 li, a
 {
     font-family:'Open Sans', sans-serif;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 18px ;
     color: cornflowerblue;
 
