--- a/src/main/webapp/WEB-INF/css/registrationFail.css
+++ b/src/main/webapp/WEB-INF/css/registrationFail.css
@@ -18,6 +18,7 @@ li, a
 
 #nav__links li
 {
+
     list-style: none;
     display: inline-block;
     padding-left:30px;
@@ -25,14 +26,10 @@ li, a
     background: none;
     text-decoration: none;
 }
-
-#home,#here{
-    font-weight: bold;
-}
 h1{
+    text-align: center;
     margin-top: 5em;
 }
-#take_to_home_or_register,h1{
+p{
     text-align: center;
-    padding-bottom: 50px;
 }
