--- a/src/main/webapp/WEB-INF/css/profile1.css
+++ b/src/main/webapp/WEB-INF/css/profile1.css
@@ -30,7 +30,7 @@ li, a
 .grid
 {
     display: block;
-    width: 300px;
+    width: 250px;
     height: 800px;
     padding: 40px 20px;
     box-sizing: border-box;
@@ -38,8 +38,66 @@ li, a
     background: #f7f8f9;
     margin-left: 15em;
     margin-top: 3em;
+    float: left;
+}
+
+.grid ul{
+    background: #f7f8f9;
+    width: 100%;
+}
+
+.grid ul li{
+
+    margin-left: -3.2em;
+    list-style: none;
+    width: 248px;
+    background: #f7f8f9;
+    transition: transform 0.5s;
+    color: black;
+    padding: 15px;
+}
+.grid ul li:hover{
+
+    background: #817ffe;
+    color: #f3ffff;
+}
+.grid ul li:focus {
+    color:  #817ffe;
+}
+.grid ul span{
+
+    margin-right: 1em;
+    margin-left: 1.8em;
+;
+}
+
+aside
+{
+    display: block;
+    width: 600px;
+    height: 800px;
+    padding: 40px 20px;
+    box-sizing: border-box;
+    border-radius: 25px;
+    background: #f7f8f9;
+    margin-left: 35em;
+    margin-top: 3em;
+}
+
+.grid5
+{
+    display: block;
+    width: 600px;
+    height: 800px;
+    padding: 40px 20px;
+    box-sizing: border-box;
+    border-radius: 25px;
+    background: #f7f8f9;
+    margin-left: 76em;
+    margin-top: -51em;
 
 }
+
 button
 {
     background: #817ffe;
@@ -52,6 +110,7 @@ button
     margin-bottom: 20px;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
+    width: 300px;
 
 }
 button:hover{ background: #403866; transition: .6s;}
@@ -60,7 +119,7 @@ button:hover{ background: #403866; transition: .6s;}
 
 .MyInput
 {
-    width: 100%;
+    width: 300px;
     background: #ecf1f4;
     border: 1px solid #ecf1f4;
     border-radius: 26px;
@@ -73,4 +132,24 @@ button:hover{ background: #403866; transition: .6s;}
     outline: none;
     text-indent: 5px;
     transition: all 0.6s ease;
+}
+
+#turu{
+
+    float: right;
+    display: block;
+    margin-right: 10px;
+}
+#huru{
+    margin-left: 1.6em;
+    margin-bottom: 2em;
+    width: 45px;
+    height: 45px;
+}
+
+label{
+    margin-left: 1em;
+    font-family: 'Open Sans', sans-serif;
+
+
 }
