--- a/src/main/webapp/WEB-INF/css/registration.css
+++ b/src/main/webapp/WEB-INF/css/registration.css
@@ -22,6 +22,7 @@ h1
 
 input
 {
+    float: left;
     width: 100%;
     background: #ecf1f4;
     border: 1px solid #ecf1f4;
@@ -57,6 +58,13 @@ input
 input:hover
 {
     padding: 14px 16px;
+}
+span{
+    float: left;
+    color: red;
+    margin-left: 1.5em;
+    font-size: 9pt;
+    font-family: "Open Sans", sans-serif;
 }
 
 button
