login css update

--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,56 +1,58 @@
-html{
+html {
     height: 100%;
 }
-#changeImg{
-    position: relative;
-    top:17px;
-}
+
 body{
-    background-image: url("images/login-background.jpg");
+    background-image: url("../../images/login.png");
     background-size: 100% 100%;
     padding: 0;
     margin: 0;
 }
+
 #positionOfLogin{
     position: relative;
     top: 350px;
-
-}
-.MyForm
-{
-    width: 320px;
-    padding: 40px 20px;
-    box-sizing: border-box;
-    position: fixed;
-    left: 50%;
-    top: 60%;
-    transform: translate(-50%, -50%);
-}
-.MyCheckBox{
     text-align: center;
-    color: #817ffe;
-    font-weight: bold;
-    font-family: "Open Sans", sans-serif;
-    opacity: 0.8;
-}
-h1
-{
-    text-align: center;
-    color: #817ffe;
-    font-weight: bold;
-    font-family: "Open Sans", sans-serif;
-    margin-bottom: 30px;
-    opacity: 0.8;
+    border: 2px solid #bdbdd3;
+    background-color: #bdbdd3;
+    width: 350px;
+    border-radius: 25px;
+    opacity: 80%;
 }
 
+.MyInput{
+    border-radius: 25px;
+    padding: 12px 14px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    color: black;
+    font-family: 'Open Sans', sans-serif;
+    text-indent: 5px;
+    transition: all 0.6s ease;
+    display: inline;
+    width: 300px;
+}
+
+input:hover{
+    padding: 14px 16px;
+}
+
+::placeholder{color: #bdbdd3;}
+
+p{
+    color: red;
+    text-align: left;
+    margin-left: 1.5em;
+    font-size: 10pt;
+}
 
 .MyButton{
-    position: center;
+    text-align: center;
     background: #817ffe;
     border: 0px solid transparent;
-    border-radius: 50px;
+    border-radius: 25px;
     padding: 8px 14px;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     margin-bottom: 20px;
     font-size: 14px;
     font-weight: bold;
@@ -59,32 +61,11 @@ h1
     outline: none;
     text-indent: 0px;
     transition: all 0.6s ease;
-    display: inline; width: 300px;
+    display: inline;
+    width: 300px;
 }
+
 .MyButton:hover{
     background: #403866;
     transition: .6s;
 }
-.MyInput{
-
-    background: #ecf1f4;
-    border: 1px solid #ecf1f4;
-    border-radius: 26px;
-    padding: 12px 14px;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    font-size: 14px;
-    color: black;
-    font-family: 'Open Sans', sans-serif;
-    outline: none;
-    text-indent: 5px;
-    transition: all 0.6s ease;
-    display: inline; width: 300px
-}
-input:hover{
-    padding: 14px 16px;
-}
-
-
-/*whatever*/
-::placeholder{color: #bdbdd3;}
