--- a/src/main/webapp/WEB-INF/css/requestForm.css
+++ b/src/main/webapp/WEB-INF/css/requestForm.css
@@ -1,13 +1,39 @@
 *{margin: 0; padding: 0;}
-body{background: #fff; font-family: 'Open Sans', sans-serif;}
+html,body {
+    width: 100%;
+    height: 100%;
+}
+body {
+    font: 14px Microsoft YaHei;
+    -webkit-text-size-adjust:100%;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    position: relative;
+    background: #000;
+}
+
+#canvas {
+    width: 100%;
+    height: 100%;
+    display: block;
+    opacity: .8;
+}
+
+body{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    /*background: #fff;*/
+    font-family: 'Open Sans', sans-serif;}
 
 .MyForm
 {
     width: 320px;
-    padding: 40px 20px;
+    /*padding: 40px 20px;*/
     box-sizing: border-box;
     position: fixed;
-    left: 80%;
+    left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
@@ -16,7 +42,7 @@ h1
 {
     text-align: center;
     color: #817ffe;
-    font-weight: normal;
+    font-size: 20pt;
     margin-bottom: 30px;
 }
 
@@ -38,6 +64,8 @@ input
     transition: all 0.6s ease;
 }
 
+
+
 .MyInput
 {
     width: 100%;
@@ -53,6 +81,7 @@ input
     outline: none;
     text-indent: 5px;
     transition: all 0.6s ease;
+    opacity: 80%;
 }
 
 input:hover
@@ -74,13 +103,19 @@ button
     cursor: pointer;
     color: #f3ffff;
     border-radius: 26px;
-    padding: 12px 118px;
+    padding: 12px 135px;
     box-sizing: border-box;
     margin-bottom: 20px;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
+    opacity: 80%;
 
 }
 button:hover{ background: #403866; transition: .6s;}
 
 ::placeholder{color: #bdbdd3;}
+ 
+
+#reason {
+    height:300px;
+}
