--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 html {
     height: 100%;
 }
@@ -5,13 +9,11 @@ html {
 body{
     background-image: url("../../images/login.png");
     background-size: 100% 100%;
-    padding: 0;
-    margin: 0;
 }
 
 #positionOfLogin{
     position: relative;
-    top: 350px;
+    top: 200px;
     text-align: center;
     border: 2px solid #bdbdd3;
     background-color: #bdbdd3;
@@ -63,6 +65,10 @@ p{
     transition: all 0.6s ease;
     display: inline;
     width: 300px;
+}
+div #forget_password a{
+    font-family: 'Open Sans', sans-serif;
+    color: white;
 }
 
 .MyButton:hover{
