--- a/src/main/webapp/WEB-INF/css/requestForm.css
+++ b/src/main/webapp/WEB-INF/css/requestForm.css
@@ -1,31 +1,17 @@
 *{margin: 0; padding: 0;}
-html,body {
-    width: 100%;
-    height: 100%;
-}
 body {
+    background-image: url("../../images/img_1.jpg");
     font: 14px Microsoft YaHei;
     -webkit-text-size-adjust:100%;
     -moz-user-select: none;
     -webkit-user-select: none;
     user-select: none;
     position: relative;
-    background: #000;
-}
-
-#canvas {
-    width: 100%;
-    height: 100%;
-    display: block;
-    opacity: .8;
-}
-
-body{
     width: 100%;
     height: 100%;
     overflow: hidden;
-    /*background: #fff;*/
-    font-family: 'Open Sans', sans-serif;}
+    font-family: 'Open Sans', sans-serif;
+}
 
 .MyForm
 {
@@ -63,8 +49,6 @@ input
     text-indent: 5px;
     transition: all 0.6s ease;
 }
-
-
 
 .MyInput
 {
