--- a/src/main/webapp/WEB-INF/css/verifyFail.css
+++ b/src/main/webapp/WEB-INF/css/verifyFail.css
@@ -1,10 +1,19 @@
+body{
+    background-image: url("../../images/verify.jpg");
+    padding: 0;
+    margin: 0;
+}
+#nav_link{
+    position: absolute;
+    top: 1px;
+    left: 1px;
+}
 li, a
 {
     font-family:'Open Sans', sans-serif;
     font-weight: bold;
     font-size: 18px ;
     color: cornflowerblue;
-
 }
 #bal
 {
@@ -18,21 +27,26 @@ li, a
 
 #nav__links li
 {
-    list-style: none;
+    /*list-style: none;*/
     display: inline-block;
     padding-left:30px;
     padding-right:30px;
-    background: none;
-    text-decoration: none;
+    /*background: none;*/
+    /*text-decoration: none;*/
 }
 
-#home,#here{
-    font-weight: bold;
-}
 h1{
     margin-top: 5em;
-}
-#take_to_home_or_register,h1{
     text-align: center;
-    padding-bottom: 50px;
+}
+#request_new_link{
+    text-align: center;
+    padding-bottom: 20px;
+}
+#register{
+    /*margin-left: 670px;*/
+    position: fixed;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
 }
