--- a/src/main/webapp/WEB-INF/css/welcome.css
+++ b/src/main/webapp/WEB-INF/css/welcome.css
@@ -1,4 +1,7 @@
-
+body{
+    margin: 0;
+    padding: 0;
+}
 li, a
 {
     font-family:'Open Sans', sans-serif;
@@ -6,6 +9,11 @@ li, a
     font-size: 18px ;
     color: floralwhite;
 
+}
+#nav_link{
+    position: absolute;
+    top: 1px;
+    left: 1px;
 }
 #bal
 {
@@ -19,7 +27,6 @@ li, a
 
 #nav__links li
 {
-
     list-style: none;
     display: inline-block;
     padding-left:30px;
