nav_bar & others css

--- a/src/main/webapp/WEB-INF/css/resetPassword.css
+++ b/src/main/webapp/WEB-INF/css/resetPassword.css
@@ -1,28 +1,21 @@
-html {
-    height: 100%;
-}
-
 body{
-    background-image: url("../../images/login.png");
+    background-image: url("../../images/verify.jpg");
     background-size: 100% 100%;
-    padding: 0;
-    margin: 0;
 }
 
 #positionOfLogin{
     position: relative;
-    top: 350px;
+    top: 200px;
     text-align: center;
-    border: 2px solid #bdbdd3;
     background-color: #bdbdd3;
-    width: 350px;
-    border-radius: 25px;
-    opacity: 100%;
+    width: 500px;
+    border-radius: 10px;
+    opacity: 70%;
 }
 
 .MyInput{
-    border-radius: 25px;
-    padding: 12px 14px;
+    border-radius: 10px;
+    /*padding: 12px 14px;*/
     margin-bottom: 20px;
     font-size: 14px;
     color: black;
@@ -45,14 +38,17 @@ p{
     margin-left: 1.5em;
     font-size: 10pt;
 }
-
+#forget_pass{
+    font-size: 18pt;
+    color: cornflowerblue;
+    padding-top: 20px;
+}
 .MyButton{
     text-align: center;
-    background: #817ffe;
+    background: cornflowerblue;
     border: 0px solid transparent;
-    border-radius: 25px;
-    padding: 8px 14px;
-    /*box-sizing: border-box;*/
+    border-radius: 10px;
+    /*padding: 1px 14px;*/
     margin-bottom: 20px;
     font-size: 14px;
     font-weight: bold;
