--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,13 +1,5 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-html {
-    height: 100%;
-}
-
 body{
-    background-image: url("../../images/login.png");
+    background-image: url("../../images/verify.jpg");
     background-size: 100% 100%;
 }
 
@@ -15,15 +7,14 @@ body{
     position: relative;
     top: 200px;
     text-align: center;
-    border: 2px solid #bdbdd3;
     background-color: #bdbdd3;
-    width: 350px;
-    border-radius: 25px;
-    opacity: 80%;
+    width: 500px;
+    border-radius: 10px;
+    opacity: 70%;
 }
 
 .MyInput{
-    border-radius: 25px;
+    border-radius: 10px;
     padding: 12px 14px;
     margin-bottom: 20px;
     font-size: 14px;
@@ -47,12 +38,17 @@ p{
     margin-left: 1.5em;
     font-size: 10pt;
 }
-
+#register_page{
+    color: cornflowerblue;
+    text-align: center;
+    font-size: 12pt;
+    padding-bottom: 20px;
+}
 .MyButton{
     text-align: center;
-    background: #817ffe;
+    background: cornflowerblue;
     border: 0px solid transparent;
-    border-radius: 25px;
+    border-radius: 10px;
     padding: 8px 14px;
     /*box-sizing: border-box;*/
     margin-bottom: 20px;
@@ -68,7 +64,7 @@ p{
 }
 div #forget_password a{
     font-family: 'Open Sans', sans-serif;
-    color: white;
+    color: cornflowerblue;
 }
 
 .MyButton:hover{
