--- a/src/main/webapp/WEB-INF/css/verifyFail.css
+++ b/src/main/webapp/WEB-INF/css/verifyFail.css
@@ -1,50 +1,13 @@
 body{
     background-image: url("../../images/verify.jpg");
-    padding: 0;
-    margin: 0;
-}
-#nav_link{
-    position: absolute;
-    top: 1px;
-    left: 1px;
-}
-li, a
-{
-    font-family:'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 18px ;
-    color: cornflowerblue;
-}
-#bal
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 18px 13%;
-    background: none;
-    text-decoration: none;
 }
 
-#nav__links li
-{
-    /*list-style: none;*/
-    display: inline-block;
-    padding-left:30px;
-    padding-right:30px;
-    /*background: none;*/
-    /*text-decoration: none;*/
-}
-
-h1{
-    margin-top: 5em;
-    text-align: center;
-}
-#request_new_link{
+p,#request_new_link{
+    font-size: 18pt;
     text-align: center;
     padding-bottom: 20px;
 }
 #register{
-    /*margin-left: 670px;*/
     position: fixed;
     text-align: center;
     text-decoration: none;
