--- a/src/main/webapp/WEB-INF/css/verifySuccess.css
+++ b/src/main/webapp/WEB-INF/css/verifySuccess.css
@@ -1,42 +1,8 @@
 body{
     background-image: url("../../images/verify.jpg");
-    margin: 0;
-    padding: 0;
-}
-#nav_link{
-    position: absolute;
-    top: 1px;
-    left: 1px;
-}
-li, a
-{
-    font-family:'Open Sans', sans-serif;
-    font-weight: bold;
-    font-size: 18px ;
-    color: cornflowerblue;
-
-}
-#bal
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 18px 13%;
-    background: none;
-    text-decoration: none;
 }
 
-#nav__links li
-{
-
-    list-style: none;
-    display: inline-block;
-    padding-left:30px;
-    padding-right:30px;
-    background: none;
-    text-decoration: none;
-}
-h1,p{
+h1,h2,a{
     text-align: center;
-    margin-top: 5em;
+    margin-top: 1em;
 }
