--- a/src/main/webapp/WEB-INF/css/profile1.css
+++ b/src/main/webapp/WEB-INF/css/profile1.css
@@ -1,3 +1,13 @@
+body{
+    background-image: url("../../images/verify.jpg");
+    background-size: 100% 100%;
+}
+
+.error{
+    color: red;
+}
+
+
 .grid
 {
     display: block;
@@ -124,3 +134,4 @@ label{
 
 
 }
+
