--- a/src/main/webapp/WEB-INF/css/resetPassword.css
+++ b/src/main/webapp/WEB-INF/css/resetPassword.css
@@ -1,7 +1,7 @@
-body{
-    background-image: url("../../images/verify.jpg");
-    background-size: 100% 100%;
-}
+/*body{*/
+/*    background-image: url("../../images/verify.jpg");*/
+/*    background-size: 100% 100%;*/
+/*}*/
 
 #positionOfLogin{
     position: relative;
