--- a/src/main/webapp/WEB-INF/css/verifyFail.css
+++ b/src/main/webapp/WEB-INF/css/verifyFail.css
@@ -1,6 +1,6 @@
-body{
-    background-image: url("../../images/verify.jpg");
-}
+/*body{*/
+/*    background-image: url("../../images/verify.jpg");*/
+/*}*/
 
 p,#request_new_link{
     font-size: 18pt;
