--- a/src/main/webapp/WEB-INF/css/verifySuccess.css
+++ b/src/main/webapp/WEB-INF/css/verifySuccess.css
@@ -1,6 +1,6 @@
-body{
-    background-image: url("../../images/verify.jpg");
-}
+/*body{*/
+/*    background-image: url("../../images/verify.jpg");*/
+/*}*/
 
 h1,h2,a{
     text-align: center;
