--- a/src/main/webapp/WEB-INF/css/registrationFail.css
+++ b/src/main/webapp/WEB-INF/css/registrationFail.css
@@ -1,6 +1,6 @@
-body{
-    background-image: url("../../images/verify.jpg");
-}
+/*body{*/
+/*    background-image: url("../../images/verify.jpg");*/
+/*}*/
 h1{
     text-align: center;
     margin-top: 5em;
