--- a/src/main/webapp/WEB-INF/css/registrationSuccess.css
+++ b/src/main/webapp/WEB-INF/css/registrationSuccess.css
@@ -1,6 +1,6 @@
-body{
-    background-image: url("../../images/verify.jpg");
-}
+/*body{*/
+/*    background-image: url("../../images/verify.jpg");*/
+/*}*/
 
 .btSubmit{
     position: fixed;
