--- a/src/main/webapp/WEB-INF/css/requestForm.css
+++ b/src/main/webapp/WEB-INF/css/requestForm.css
@@ -1,16 +1,16 @@
-body {
-    background-image: url("../../images/verify.jpg");
-    font: 14px Microsoft YaHei;
-    -webkit-text-size-adjust:100%;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-family: 'Open Sans', sans-serif;
-}
+/*body {*/
+/*    !*background-image: url("../../images/verify.jpg");*!*/
+/*    font: 14px Microsoft YaHei;*/
+/*    -webkit-text-size-adjust:100%;*/
+/*    -moz-user-select: none;*/
+/*    -webkit-user-select: none;*/
+/*    user-select: none;*/
+/*    position: relative;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    overflow: hidden;*/
+/*    font-family: 'Open Sans', sans-serif;*/
+/*}*/
 
 .MyForm
 {
