--- a/src/main/webapp/WEB-INF/css/requestForm.css
+++ b/src/main/webapp/WEB-INF/css/requestForm.css
@@ -95,9 +95,15 @@ button
 }
 button:hover{ background: #403866; transition: .6s;}
 
-::placeholder{color: #bdbdd3;}
  
 
 #reason {
     height:300px;
 }
+::placeholder{
+    color:white;
+    opacity: 1;
+    text-align: center;
+    padding-right: 15px;
+}
+
