--- a/src/main/webapp/WEB-INF/css/navBar.css
+++ b/src/main/webapp/WEB-INF/css/navBar.css
@@ -1,34 +1,38 @@
-*{
-    padding: 0;
-    margin: 0;
-    /*background-color: #FFDFD3;*/
+li, a
+{
+    font-family:'Open Sans', sans-serif;
+    font-weight: 500;
+    font-size: 18px ;
+    color: white;
+
 }
-body{
-    background-color: #E9DCC9;
+#bal
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 13%;
+    background:  #403866;
+    text-decoration: none;
+    height: 70px;
 }
-#nav_link{
-    position: absolute;
-    top: 1px;
-    left: 1px;
+a img{
+    width: 170px;
+    height: 30px;
 }
 
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-li{
-    float: right;
-}
-li a
-{
-    font-family: "Open Sans", sans-serif;
-    font-weight: bold;
-    font-size: 14pt;
-    color: cornflowerblue;
-    text-decoration: none;
+#nav__links li {
+
+    list-style: none;
     display: inline-block;
-    padding:30px 30px;
-    margin-top: -15px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    background: none;
+    text-decoration: none;
+}
+#nav__links li a{
+
+  color: white;
+    text-decoration: none;
 }
